--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "@aegis.inc/drag-drop",
-  "version": "0.0.1-beta",
-  "description": "",
+  "version": "0.0.1",
+  "description": "drag drop vue3.0 vue",
   "main": "dist/drag-drop.es.js",
   "private": false,
   "files": ["dist"],
   "license": "Apache-2.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "release": "npm publish --access public"
+  },
+  "repository": {
+    "url": "https://github.com/wuhao000/drag-drop.git"
   },
   "publishConfig": {
     "registry": "http://registry.npmjs.org"
